--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 ****************************************************************************
+* Version 5.2                                                  23 Jun 2005 *
+****************************************************************************
+
+Er... not much here yet.
+
+****************************************************************************
 * Version 5.1                                                  30 Nov 2004 *
 ****************************************************************************
 
